--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asttokens==3.0.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 comm==0.2.2
+cryptography==44.0.2
 debugpy==1.8.13
 decorator==5.2.1
 executing==2.2.0
@@ -15,16 +17,24 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
+pdfminer.six==20231228
+pdfplumber==0.11.5
 pexpect==4.9.0
+pillow==11.1.0
 platformdirs==4.3.7
 prompt_toolkit==3.0.50
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pycparser==2.22
 Pygments==2.19.1
+pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
+pytz==2025.2
 pyzmq==26.3.0
 requests==2.32.3
 six==1.17.0
@@ -33,5 +43,6 @@ stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 wcwidth==0.2.13
